tests-integration/fixtures/checking/119_instance_member_type_mismatch/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
show :: forall (a :: Type). Show (a :: Type) => (a :: Type) -> String

Types
Show :: Type -> Constraint

Classes
class Show (&0 :: Type)

Instances
instance Show (Int :: Type)
  chain: 0

Diagnostics
error[CannotUnify]: Cannot unify 'Int' with 'String'
  --> 6:1..8:13
  |
6 | instance Show Int where
  | ^~~~~~~~~~~~~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Int -> Int' with 'Int -> String'
  --> 6:1..8:13
  |
6 | instance Show Int where
  | ^~~~~~~~~~~~~~~~~~~~~~~
error[InstanceMemberTypeMismatch]: Instance member type mismatch: expected 'Int -> String', got 'Int -> Int'
  --> 6:1..8:13
  |
6 | instance Show Int where
  | ^~~~~~~~~~~~~~~~~~~~~~~
